RESOLVED FIXED78851
[Chromium] Texture eviction doesn't show up in traces.
https://bugs.webkit.org/show_bug.cgi?id=78851
Summary [Chromium] Texture eviction doesn't show up in traces.
David Reveman
Reported 2012-02-16 15:27:43 PST
Add TextureManager::evictTexture() function with TRACE statement so that texture eviction shows up in traces.
Attachments
Patch (3.15 KB, patch)
2012-02-16 15:30 PST, David Reveman
no flags
Patch (2.67 KB, patch)
2012-02-17 11:44 PST, David Reveman
no flags
David Reveman
Comment 1 2012-02-16 15:30:23 PST
Nat Duca
Comment 2 2012-02-16 20:36:50 PST
Comment on attachment 127455 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=127455&action=review LGTM with nit > Source/WebCore/platform/graphics/chromium/TextureManager.cpp:194 > + TRACE_EVENT("TextureManager::evictTexture", this, 0); Might be better to put the trace in "removeTexture" to avoid confusion over TextureManager::evictTexture being a function call that itself only conditionally traces.
David Reveman
Comment 3 2012-02-17 11:44:51 PST
David Reveman
Comment 4 2012-02-17 11:50:24 PST
(In reply to comment #2) > (From update of attachment 127455 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=127455&action=review > > LGTM with nit > > > Source/WebCore/platform/graphics/chromium/TextureManager.cpp:194 > > + TRACE_EVENT("TextureManager::evictTexture", this, 0); > > Might be better to put the trace in "removeTexture" to avoid confusion over TextureManager::evictTexture being a function call that itself only conditionally traces. Yes, the conditional trace in evictTexture() is less than ideal. I kept the evictTexture() function as I'd like to distinguish between a texture being removed normally and from eviction but I instead made the function a simple wrapper around removeTexture().
WebKit Review Bot
Comment 5 2012-02-17 14:31:29 PST
Comment on attachment 127624 [details] Patch Clearing flags on attachment: 127624 Committed r108124: <http://trac.webkit.org/changeset/108124>
WebKit Review Bot
Comment 6 2012-02-17 14:31:33 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.