[Chromium] Texture eviction doesn't show up in traces. https://bugs.webkit.org/show_bug.cgi?id=78851

Patch by David Reveman <reveman@chromium.org> on 2012-02-17
Reviewed by James Robinson.

Add TextureManager::evictTexture() function with TRACE statement so
that texture eviction shows up in traces.

No new tests.

* platform/graphics/chromium/TextureManager.cpp:
(WebCore::TextureManager::evictTexture):
(WebCore):
(WebCore::TextureManager::reduceMemoryToLimit):
* platform/graphics/chromium/TextureManager.h:
(TextureManager):

git-svn-id: svn://svn.chromium.org/blink/trunk@108124 bbb929c8-8fbe-4397-9dbb-9b2b20218538