third_party/WebKit/Source/WebCore/platform/graphics/chromium/TextureManager.h
@@ -110,6 +110,7 @@ private:
 
     void addTexture(TextureToken, TextureInfo);
     void removeTexture(TextureToken, TextureInfo);
+    void evictTexture(TextureToken, TextureInfo);
 
     HashSet<ManagedTexture*> m_registeredTextures;
 
